Don't shorten wait time before game starts after the first game has been played, as player does need time to prepare; Lock out play button on game over for a short time, to prevent a player on mobile accidentally re-starting a game (because the play button is in the same position the input field is)

--- a/akc/css/game.css
+++ b/akc/css/game.css
@@ -75,6 +75,12 @@ body.attract #attract, body.waiting #waiting, body.playing #playing, body.game-o
   outline-offset: -2px;
 }
 
+.play.disabled {
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 0.65;
+}
+
 .unranked {
   stroke: #555555;
 }
